--- a/index.html
+++ b/index.html
@@ -30,15 +30,14 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1>Adam Jensen</h1>
-						<p>Security Chief &nbsp;&bull;&nbsp; Cyborg &nbsp;&bull;&nbsp; Never asked for this</p>
+						<h1>Manav Mandhani</h1>
+						<p>Software &nbsp;&bull;&nbsp; Music &nbsp;&bull;&nbsp; Travel</p>
 						<nav>
 							<ul>
-								<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-								<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
-								<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+								<li><a href="https://twitter.com/mandhanimanav" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+								<li><a href="https://www.facebook.com/Manav.Mandhani" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+								<li><a href="https://github.com/manavm" class="icon fa-github"><span class="label">Github</span></a></li>
+								<li><a href="mailto:manavm@utexas.edu" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 							</ul>
 						</nav>
 					</header>
