--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 								<li><a href="https://www.facebook.com/Manav.Mandhani" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 								<li><a href="https://github.com/manavm" class="icon fa-github"><span class="label">Github</span></a></li>
 								<li><a href="mailto:manavm@utexas.edu" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+								<li><a href="https://www.linkedin.com/pub/manav-mandhani/48/69/559" class="icon fa-linkedin-square"><span class="label">Email</span></a></li>
 							</ul>
 						</nav>
 					</header>
