Added resume icon

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 								<li><a href="https://www.facebook.com/Manav.Mandhani" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 								<li><a href="https://github.com/manavm" class="icon fa-github"><span class="label">Github</span></a></li>
 								<li><a href="mailto:manavm@utexas.edu" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
-								<li><a href="https://www.linkedin.com/pub/manav-mandhani/48/69/559" class="icon fa-linkedin-square"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://www.linkedin.com/pub/manav-mandhani/48/69/559" class="icon fa-file-pdf-o"><span class="label">LinkedIn</span></a></li>
 								<li><a href="https://www.dropbox.com/s/g191z7egc9vut3b/Resume_ManavMandhani.pdf?dl=0" class="icon fa-file-pdf-o"><span class="label">Resume</span></a></li>
 							</ul>
 						</nav>
