getting rid of twitter

--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
 						<p>Software &nbsp;&bull;&nbsp; Music &nbsp;&bull;&nbsp; Travel</p>
 						<nav>
 							<ul>
-								<li><a href="https://twitter.com/mandhanimanav" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="https://www.facebook.com/Manav.Mandhani" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+s								<li><a href="https://www.facebook.com/Manav.Mandhani" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 								<li><a href="https://github.com/manavm" class="icon fa-github"><span class="label">Github</span></a></li>
 								<li><a href="mailto:manavm@utexas.edu" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 								<li><a href="https://www.linkedin.com/pub/manav-mandhani/48/69/559" class="icon fa-linkedin-square"><span class="label">LinkedIn</span></a></li>
